<?xml version="1.0" encoding="utf-8"?>
<!--Generated by crowdin.net-->
<resources>
  <string name="CodiceAttivazione">"Promotional code"</string>
  <string name="CodiceAttivazioneDescrizione">"Enter promotion code to remove ads"</string>
  <string name="CodiceAccettato">"Congrats! You've unlocked the ad-free version of Xday."</string>
  <string name="app_name">Xday</string>
  <string name="Annulla">Cancel</string>
  <string name="title_activity_main">Xday</string>
  <string name="Aggiungi">Add</string>
  <string name="Aggiorna">Refresh</string>
  <string name="Manca">Left:</string>
  <string name="Passato">Passed:</string>
  <string name="AllaData">To:</string>
  <string name="Temporale">Automatic temporally sorting</string>
  <string name="Manuale">Manual sorting</string>
  <string name="Notifica_il_giorno_e_arrivato">"The long-awaited day is finally here"</string>
  <string name="DallaData">From:</string>
  <string name="Error">"I'm an error"</string>
  <string name="DescrizioneDefault">[Click to insert description]</string>
  <string name="Elimina">Delete</string>
  <string name="Conferma">Confirm</string>
  <string name="Modifica">Edit</string>
  <string name="SmartPizzaCorpo">Try it</string>
  <string name="Descrizione">"Description"</string>
  <string name="InserisciDescrizione">"Insert a description of the date"</string>
  <string name="minimoNdate">"You must choose at least one parameter"</string>
  <string name="creditsMe">"Application designed and developed by:
 Antonio Altieri"</string>
  <string name="AltriRingraziamenti">\Tester:\n
Circelli Fiorella\n
Ruggiero Arianna\n
\n
<a href="http://www.getlocalization.com/xday/stats">Translators</a>\n
German: maxhauser\n
Slovak: stileth\n
French: tnt, lordseta, Aurel45, oeil2lynx, ShaEnigma, Cza, fredatgetlocalization\n
Portuguese: lookenx, fernandolopes, naldao\n
Estonian: TanelTerras\n
Chinese: Felix2yu\n
This application uses <a href="http://www.joda.org/joda-time/">Joda-time</a>, 
<a href="http://actionbarsherlock.com/">ActionBarScherlock</a>, 
<a href="http://acra.ch/">Acra</a>,
<a href="https://github.com/bauerca/drag-sort-listview">DragSortListView</a>, 
<a href="https://github.com/attenzione/android-ColorPickerPreference">ColorPickerPreference</a>, 
<a href="https://github.com/chrisjenx/Paralloid">Paralloid</a>, 
<a href="https://github.com/keyboardsurfer/Crouton">Crouton</a>, 
 libraries granted under the Apache License 2.0.\n
This application is Open source and it\'s granted under the Apache License 2.0\"</string>
  <string name="acquisto">If you like Xday and you want to support me, buy Xday ad-free</string>
  <string name="apacheLink"><a href="http://www.apache.org/licenses/LICENSE-2.0.html">Apache license 2.0</a></string>
  <string name="about">About</string>
  <string name="SourceCode">"Source code: "</string>
  <string name="VediSubito">"Take a look"</string>
  <string name="SelezionaDataWidget">Select date</string>
  <string name="Contatti">Contact the developer, report bugs, suggest features: \n altieriantonio.dev@gmail.com</string>
  <string name="Opzioni">Options</string>
  <string name="Parametri">Set parameters</string>
  <string name="nessunaData">You haven\'t still added any date in Xday, add a date before inserting a widget</string>
  <string name="riordina">Reorder</string>
  <string name="FineRiordinamento">Rearrange finished</string>
  <string name="esporta">Export</string>
  <string name="importa">Import</string>
  <string name="VotamiTitolo">Do you like Xday? Rate it!</string>
  <string name="VotamiCorpo">Xday is completely free and it\'s being continually updated, and it will remain forever. However, you can buy the ad-free version on the play store spending less than a cup of coffee. If you want to support me and help me in a totally free mode, you can rate the application on the play store. Thanks for your support!</string>
  <string name="ExportError">"Unable to export the database."</string>
  <string name="ExportSucceded">"Exported successfully in the path: %s"</string>
  <string name="ImportError">"Error importing the file. Be sure to place the file in this location: %s"</string>
  <string name="ImportSucceded">"Imported successfully."</string>
  <string name="WrongFile">"Selected file is not valid. Select a file with xdy extension."</string>
  <string name="sending_crash_report_to_developer">Sending crash report to developer</string>
  <string name="RecensisciSubito">Review now</string>
  <string name="RicordaTardi">Remind me later</string>
  <string name="RicordaMai">Don\'t remind me anymore</string>
  <string name="nessunaData_empty_view">You have not added any date in Xday.</string>
  <string name="ConfigurationNotFoundWidgetSolo">"The date to show in this widget has been deleted or it's inaccessible. Please reconfigure the widget."</string>
  <string name="loading">"Loading…"</string>
  <string name="importFile"> "Select a File to Import"</string>
  <string name="nessunaDataSelezionata">You haven\'t selected any date, so the widget will be not added</string>
  <string name="prova_smartpizza">Try SmartPizza!</string>
  <string name="condividi">Share</string>
  <string name="condividi_con">Share with</string>
  <string name="Changelog">Changelog</string>
  <string name="passato_all_evento">"Passed {0}from {1}."</string>
  <string name="mancano_all_evento">"Left {0}from {1}."</string>
  <string name="sourceCode"><a href="http://github.com/Asdamp/Xday">Source Code</a></string>
  
  <string-array name="ADDselezionaData">
    <item>Set date</item>
    <item>Set the date from which you want to know the left/passed time</item>
  </string-array>
  <string-array name="ADDselezionaOra">
    <item>Set time</item>
    <item>"Set time. By default 00:00"</item>
  </string-array>
  <string-array name="ADDselezionaParametri">
    <item>Set parameters</item>
    <item>Choose how accurately you want to calculate the remaining/past time </item>
  </string-array>
  <string-array name="ADDselezionaDescrizione">
    <item>"Set a description"</item>
    <item>"Insert a description of the date"</item>
  </string-array>
  <string-array name="ADDselezionaColore">
    <item>"Select color"</item>
    <item>"Set a color for the description"</item>
  </string-array>
  <string-array name="ADDselezionaPromemoria">
    <item>"Set a reminder"</item>
    <item>"Set a notification for your event"</item>
  </string-array>
  <string-array name="WidgetSingleSelezionaColore">
    <item>"Select color"</item>
    <item>"Set widget's background color"</item>
  </string-array>
  <string-array name="WidgetSingleSelezionaData">
    <item>"Select event"</item>
    <item>"Select the event to be displayed in the widget"</item>
  </string-array>
  <string-array name="Parametri">
    <item name="Anni">"Years"</item>
    <item name="Mesi">"Months"</item>
    <item name="Settimane">"Weeks"</item>
    <item name="Giorni">"Days"</item>
    <item name="Ore">"Hours"</item>
    <item name="Minuti">"Minutes"</item>
    <item name="Secondi">"Seconds"</item>
  </string-array>
  <plurals name="Anni">
    <item quantity="one">"1 year"</item>
    <item quantity="other">"%d years"</item>
  </plurals>
  <plurals name="Mesi">
    <item quantity="one">"1 month"</item>
    <item quantity="other">"%d months"</item>
  </plurals>
  <plurals name="Settimane">
    <item quantity="one">"1 week"</item>
    <item quantity="other">"%d weeks"</item>
  </plurals>
  <plurals name="Giorni">
    <item quantity="one">"1 day"</item>
    <item quantity="other">"%d days"</item>
  </plurals>
  <plurals name="Ore">
    <item quantity="one">"1 hour"</item>
    <item quantity="other">"%d hours"</item>
  </plurals>
  <plurals name="Minuti">
    <item quantity="one">"1 minute"</item>
    <item quantity="other">"%d minutes"</item>
  </plurals>
  <plurals name="Secondi">
    <item quantity="one">"1 second"</item>
    <item quantity="other">"%d seconds"</item>
  </plurals>
    <string name="seleziona_ora">Time select</string>
    <string name="seleziona_data">Date select</string>
    <string name="overflow">Overflow. The result number is too big.</string>
    <string name="this_code_is_invalid_please_try_to_insert_it_again_">This code is invalid. Please try to insert it again.</string>
    <string name="inport_error_file_corrupted">The selected file is corrupted or it doesn\'t contain xday datas</string>
    <string name="add_modify_date_settings">Add/modify date settings</string>
    <string name="settings">Settings</string>
</resources>
