<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@id/relative_layout_widget_single_data"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/bg_widget_list"
    android:columnCount="5"
    android:orientation="horizontal" >

    <TextView
        android:id="@+id/mancanoopassato2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/descrizionePersonale2"
        android:layout_gravity="left"
        android:layout_marginLeft="14.0dip"
        android:text="@string/Manca"
        android:textSize="18.0sp" />

    <TextView
        android:id="@+id/alladata2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/mancante2"
        android:layout_gravity="left"
        android:layout_marginLeft="30.0dip"
        android:layout_marginTop="3.0dip"
        android:fontFamily="condensed"
        android:text="@string/AllaData"
        android:textSize="12.0sp" />

    <TextView
        android:id="@+id/data2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/progressi2"
        android:layout_below="@id/mancante2"
        android:layout_gravity="left"
        android:layout_marginTop="3.0dip"
        android:layout_toRightOf="@id/alladata2"
        android:fontFamily="condensed"
        android:text="@string/Error"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="12.0sp" />

    <TextView
        android:id="@id/mancante2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/descrizionePersonale2"
        android:layout_gravity="left"
        android:layout_toLeftOf="@+id/refresh_widget_solo"
        android:layout_toRightOf="@id/mancanoopassato2"
        android:text="@string/Error"
        android:textAppearance="?android:textAppearanceLarge"
        android:textSize="18.0sp" />

    <TextView
        android:id="@id/descrizionePersonale2"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:fontFamily="sans-serif-bold"
        android:gravity="center"
        android:text="@string/Error"
        android:textAppearance="?android:textAppearanceLarge"
        android:textColor="@color/android_blu"
        android:textSize="20.0sp"
        android:textStyle="italic"
        android:typeface="sans" />

    <ProgressBar
        android:id="@id/progressi2"
        style="?android:attr/progressBarStyleHorizontal"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@id/alladata2"
        android:layout_marginLeft="40.0dip"
        android:layout_marginRight="20.0dip"
        android:max="1000" />

    <Button
        android:id="@id/refresh_widget_solo"
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:background="@drawable/navigation_refresh" />

</RelativeLayout>